--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>ANISTREAM | World's best anime streaming service</title>
+    <title>Killersparrow | World's best anime streaming service</title>
   </head>
   <body>
     <nav id="navbar">
       <div id="title">
         <img src="images/Logos/Logo.png" />
-        <div>ANISTREAM</div>
+        <div>Killersparrow</div>
       </div>
       <ul>
         <li><a href="#">Shows</a></li>
@@ -118,7 +118,7 @@
 
     <footer>
       <img src="images/Logos/Logo.png" />
-      <div>ANISTREAM</div>
+      <div>Killersparrow</div>
 
       <ul class="misc-links">
         <li><a href="">About</a></li>
